fixed spacing

--- a/src/containers/Watch/Watch.scss
+++ b/src/containers/Watch/Watch.scss
@@ -25,8 +25,8 @@
     grid-row: 4 / 5;
   }
 
-  //   .related-vids {
-  //     grid-column: 2 / 3;
-  //     grid-row: 1 / span 4;
-  //   }
+  .related-vids {
+    grid-column: 2 / 3;
+    grid-row: 1 / span 4;
+  }
 }
